<resources>
    <string name="app_name">Weatheroo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locationTxtView">San Francisco</string>
    <string name="currentTempTxtView">18 °</string>
    <string name="today">Today</string>
    <string name="Weelly">Weelly</string>
    <string name="nextWeek">Next Week</string>
    <string name="shared_pref">SharedPreferences</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="location">Location</string>
    <string name="timeZone">TimeZone</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Save">Save Location</string>
    <string name="saveBtn">Save</string>
    <string name="Units" />
    <string name="units">Units</string>
    <string name="Add_Alarm">Add Alarm</string>
    <string name="reason">what is the reason for the alarm ?</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="enable_dialog">Enable Dialog</string>
    <string name="add_alert">Add</string>
    <string name="requestPosition">how do you want to configure location ?</string>
    <string name="cancelPositionRequest">Cancel</string>
    <string name="approvePositionRequest">Let\'s Go</string>
    <string name="homeButtonNav">Home</string>
    <string name="favouriteButtomNav">Favourites</string>
    <string name="alertsButtonNav">Alerts</string>
    <string name="settingsButtomNav">Settings</string>
    <string name="todayLabel">Today</string>
    <string name="nextWeekLabel">NextWeek</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="locationLabel">Location</string>
    <string name="languageLabel">Language</string>
    <string name="arabicLang">Arabic</string>
    <string name="mapLabel">Map</string>
    <string name="gpsLabel">GPS</string>
    <string name="unitsLabel">Units</string>
    <string name="imperial">imperial    (tem in F and wind  in m/h)</string>
    <string name="standardLabel">standard    (tem in K and wind  in m/s)</string>
    <string name="metricUnit">metric    (tem in C and wind  in m/s)</string>
    <string name="saveBtnValue">Save</string>
</resources>