<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_alarm.view.AddAlarmFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"
                android:text="@string/Add_Alarm" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:fontFamily="casual"
                android:text="@string/reason"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reasonTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/startDate"
                android:textSize="16sp"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/startDateid"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:inputType="none"
                android:minHeight="48dp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/endDateid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:inputType="none"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Alarm Time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/alertTimeTxtView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textLongMessage"
                android:minHeight="48dp"
                android:textColorHighlight="@color/design_default_color_primary_variant"
                android:textColorLink="@color/purple_700"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <Switch
                android:id="@+id/enableDialogSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/enable_dialog"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addBtn"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30sp"
                android:text="@string/add_alert"
                android:textSize="16sp"
                app:cornerRadius="25dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

